<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EasyA</string>
    <string name="add_friends">Add Friends</string>
    <string name="action_settings">Settings</string>

    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_edit">Edit</string>

    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_key" translatable="false">sort_by</string>
    <string name="pref_sort_default" translatable="false">date</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="studying_status">Studying status</string>
    <string name="search">Search</string>

    <string name="about">Help</string>
    <string name="chose_image">CHOOSE IMAGE</string>
    <string name="friends">Friends</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>

    <string name="shared_element" translatable="false">shared_image</string>

    <string name="your_lesson">Your lesson</string>
    <string name="your_course">Your courses</string>
    <string name="your_friends_list">Friend`s list</string>

    <string name="friend_lesson">`s lesson</string>
    <string name="friend_course">`s courses</string>

    <string name="loading_courses">Loading your courses ...</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="loading">Loading</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="is_studying">Show studying</string>

    <string name="user" translatable="false">user</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_course">Are you sure you want to delete this course</string>
    <string name="delete_lesson">Are you sure you want to delete this lesson</string>
    <string name="delete">Delete</string>

    <string name="course_name">Course Name</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="course_name_hint">Enter Course Name</string>
    <string name="teacher_name_hint">Enter Teacher Name</string>

    <string name="lesson_name">Lesson Name</string>
    <string name="lesson_name_des">Try to simplify it.</string>
    <string name="summary">Summary</string>
    <string name="summarize">Summarize what you learned</string>

    <string name="application_title">Application title</string>
    <string name="description">Description</string>

    <string name="difference">Difference</string>
    <string name="link">Link</string>

    <string name="lesson_tap">Lesson</string>
    <string name="favorite_lesson_tap">Favorite lesson</string>

    <string name="gallery">Gallery</string>
    <string name="photo">Take a photo</string>
    <string name="search_online">Search Online</string>
    <string-array name="sort_type_name">
        <item>Favorite</item>
        <item>Date</item>
    </string-array>
    <string-array name="sort_type_value">
        <item>favorite</item>
        <item>date</item>
    </string-array>
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">easya.ideas.link</string>
    <string name="content_authority">link.ideas.easya</string>

    <string name="hint_link">Look for a metaphor.</string>
    <string name="hint_debug">How is your link different from lesson</string>
    <string name="hint_title">Add an idea or an example.</string>
    <string name="hint_descr">Write your idea in details</string>

    <string name="info_link">Link the lesson to something else, Try using that (reminds me of). Put in mind that, Lesson come from somewhere, doesn’t stand alone, and it follows patterns. Try linking the lesson to other ideas that interest you. It doesn’t matter how ridiculous the idea is.</string>
    <string name="info_debug">In the link section, you searched for metaphor and state the similarity between it and the lesson, here you will say how the link and the lesson are different.</string>
    <string name="info_title">Find a way you can apply what you learned, an idea or example that you use in your own life.</string>
    <string name="info_descr">Summarize the application idea. what does it means, methods ,most important results and conclusions.</string>


    <!-- Base Error Strings-->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <!-- Google Errors -->
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>

    <string name="you_have_no_friend">You do not have friends yet please add them</string>

    <string name="pixabay_text">Powered by Pixabay search engine </string>

    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="text_add_friend">Add Friend</string>
    <!-- Toast Errors -->
    <string name="toast_is_already_your_friend">%s is already your friend!</string>
    <string name="toast_user_is_not_found">Your friend is not found!</string>
    <string name="toast_you_cant_add_yourself">You can\'t add yourself as a friend.</string>

    <string name="login_des_warning">You need to sign in first to access your friends list</string>
    <string name="login_title_warning">Not Signed In</string>
    <string name="login_share_warning">You need to sign in first to share your lesson</string>
    <string name="shared_lesson_warning">Your lesson is already shared</string>

    <string name="no_google_classroom">You need to have Google Classroom,so Easy A could Load your courses</string>
    <string name="network">No network connection available.</string>
    <string name="network_edit">We cannot edit your lesson online, No network connection available.</string>
    <string name="no_course">The Courses you will add, will show up here, so add some</string>
    <string name="no_lesson">The Lesson you will add, will show up here, so add some</string>
    <string name="title_activity_subject_list_friends">SubjectListFriends</string>
    <string name="not_found">Not Found</string>
    <string name="course_name_error">Please fill in the course name</string>
    <string name="lesson_added">Your Lesson has been shared, all friends how add you can see it </string>
    <string name="lesson_edited">Your Lesson has been edited, all friends how add you can see it </string>
    <string name="lesson_uploading">Your Lesson is being uploaded </string>
    <string name="get_image_permissions">we need permissions to be able to get the image</string>
    <string name="lesson_name_error">Enter Lesson Name</string>
    <string name="summary_error">Enter lesson summary</string>
    <string name="add_friend">Enter friends email</string>

    <!-- A11y -->
    <string name="a11y_profileImage">User Profile Image </string>
    <string name="a11y_link_image">Link selected Image</string>
    <string name="a11y_app_image">Real life application selected image</string>
    <string name="a11y_outline_image">Lesson selected Image </string>

    <string name="a11y_menu_background">Menu background </string>
    <string name="a11y_gallery_icon">Gallery icon</string>
    <string name="a11y_camera_icon">Camera icon</string>
    <string name="a11y_search_online_icon">Search online icon</string>

    <!--get the name of the image and put it-->
    <string name="a11y_image_search_item">Image item search result</string>
    <string name="a11y_email_icon">email icon</string>
    <string name="a11y_user_name_icon">User name icon</string>
    <string name="a11y_course_background">Course Background image</string>

    <string name="a11y_add_friend_button">Add Friend button</string>
    <string name="a11y_profile_image">user profile image</string>
    <string name="a11y_add_image">selected image</string>

    <string name="a11y_link_info">link information button</string>
    <string name="a11y_debug_info">debug information button</string>
    <string name="a11y_app_info">Real life application information button</string>
    <string name="a11y_app_title_info">Real life application title information button</string>


    <string name="a11y_course_name">Course name is:   <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_teacher_name">Teacher name is:   <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_teacher_image">teacher image</string>

    <string name="a11y_lesson_name">Lesson name is :   <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_link">link is :   <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_name_button">friend name is :   <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_email_button">friend email is :   <xliff:g id="condition">%1$s</xliff:g></string>



</resources>
