<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eman.app.android.easya.SubjectDetail">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

</menu><!--  android:icon="@drawable/ic_favorite_black_48dp" -->
