<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?attr/colorAccent" />

        <EditText
            android:id="@+id/course_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:minLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?attr/colorAccent" />

        <EditText
            android:id="@+id/teacher_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:minLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <GridView
            android:id="@+id/gridview_color"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawSelectorOnTop="true"
            android:focusable="true"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:gravity="end"
                android:padding="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="?attr/colorAccent" />
            <TextView
                android:id="@+id/txt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:padding="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="?attr/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>