<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="link.ideas.easya.FriendsList">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/progress_bar" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/error_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/you_have_no_friend"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text_secondary_dark"
                android:visibility="gone"
                android:padding="@dimen/activity_vertical_margin"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_friend"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add_friend"
                    style="@style/HeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_add_friend" />

                <ImageButton
                    android:id="@+id/btn_add_friend"
                    android:layout_width="@dimen/lists_row_height"
                    android:layout_height="@dimen/lists_row_height"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:onClick="onAddFriendPressed"
                    android:contentDescription="@string/a11y_add_friend_button"
                    android:src="@drawable/icon_add_friend" />
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="false"
            app:headerLayout="@layout/nav_header_main"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:menu="@menu/activity_main_drawer" />
    </android.support.v4.widget.DrawerLayout>
</android.support.design.widget.CoordinatorLayout>